@@ -41,7 +41,11 @@ import java.util.Enumeration;
 import java.util.HashSet;
 import java.util.Hashtable;
 
+import org.w3c.dom.Document;
+import org.w3c.dom.Element;
+
 import tla2sany.explorer.ExploreNode;
+import tla2sany.explorer.ExplorerVisitor;
 import tla2sany.parser.SyntaxTreeNode;
 import tla2sany.st.TreeNode;
 import tla2sany.utilities.Strings;
@@ -49,9 +53,6 @@ import tla2sany.utilities.Vector;
 import tla2sany.xml.SymbolContext;
 import util.UniqueString;
 import util.WrongInvocationException;
-
-import org.w3c.dom.Document;
-import org.w3c.dom.Element;
 
 public class LabelNode extends ExprNode
                        implements ExploreNode, OpDefOrLabelNode {
@@ -282,14 +283,16 @@ public class LabelNode extends ExprNode
   * The methods for implementing the ExploreNode interface.                *
   *************************************************************************/
   @Override
-  public final void walkGraph(Hashtable<Integer, ExploreNode> semNodesTable) {
-    Integer uid = new Integer(myUID);
+  public final void walkGraph(Hashtable<Integer, ExploreNode> semNodesTable, ExplorerVisitor visitor) {
+    Integer uid = Integer.valueOf(myUID);
     if (semNodesTable.get(uid) != null) return;
     semNodesTable.put(uid, this);
-    if (body != null) body.walkGraph(semNodesTable);
+    visitor.preVisit(this);
+    if (body != null) body.walkGraph(semNodesTable, visitor);
     for (int i = 0 ; i < params.length; i++) {
-      params[i].walkGraph(semNodesTable);
+      params[i].walkGraph(semNodesTable, visitor);
      } ;
+     visitor.postVisit(this);
   }
 
   @Override
