@@ -6,14 +6,15 @@ import java.util.HashSet;
 import java.util.Hashtable;
 import java.util.Iterator;
 
+import org.w3c.dom.Document;
+import org.w3c.dom.Element;
+
 import tla2sany.explorer.ExploreNode;
+import tla2sany.explorer.ExplorerVisitor;
 import tla2sany.st.TreeNode;
 import tla2sany.utilities.Strings;
 import tla2sany.utilities.Vector;
 import tla2sany.xml.SymbolContext;
-
-import org.w3c.dom.Document;
-import org.w3c.dom.Element;
 
 public class LetInNode extends ExprNode
 implements ExploreNode, LevelConstants {
@@ -238,24 +239,26 @@ implements ExploreNode, LevelConstants {
    }
 
   @Override
-  public final void walkGraph(Hashtable<Integer, ExploreNode> semNodesTable) {
-    Integer uid = new Integer(myUID);
+  public final void walkGraph(Hashtable<Integer, ExploreNode> semNodesTable, ExplorerVisitor visitor) {
+    Integer uid = Integer.valueOf(myUID);
 
     if (semNodesTable.get(uid) != null) return;
 
     semNodesTable.put(uid, this);
+    visitor.preVisit(this);
 
     /***********************************************************************
     * Can now walk LET nodes from context, don't need to use opDefs        *
     * (which is incomplete).                                               *
     ***********************************************************************/
-    if (context != null){context.walkGraph(semNodesTable);} ;
+    if (context != null){context.walkGraph(semNodesTable, visitor);} ;
 //    if (opDefs != null) {
 //      for (int i = 0; i < opDefs.length; i++) {
 //        if (opDefs[i] != null) opDefs[i].walkGraph(semNodesTable);
 //      }
 //    }
-    if (body != null) body.walkGraph(semNodesTable);
+    if (body != null) body.walkGraph(semNodesTable, visitor);
+    visitor.postVisit(this);
   }
 
   @Override
