@@ -21,13 +21,14 @@ package tla2sany.semantic;
 
 import java.util.Hashtable;
 
+import org.w3c.dom.Document;
+import org.w3c.dom.Element;
+
 import tla2sany.explorer.ExploreNode;
+import tla2sany.explorer.ExplorerVisitor;
 import tla2sany.st.TreeNode;
 import tla2sany.utilities.Strings;
 import tla2sany.xml.SymbolContext;
-
-import org.w3c.dom.Document;
-import org.w3c.dom.Element;
 
 public class NewSymbNode extends LevelNode {
 
@@ -170,11 +171,13 @@ public class NewSymbNode extends LevelNode {
   }
 
   @Override
-  public final void walkGraph(Hashtable<Integer, ExploreNode> semNodesTable) {
-    Integer uid = new Integer(myUID);
+  public final void walkGraph(Hashtable<Integer, ExploreNode> semNodesTable, ExplorerVisitor visitor) {
+    Integer uid = Integer.valueOf(myUID);
     if (semNodesTable.get(uid) != null) return;
     semNodesTable.put(uid, this);
-    if (set != null) { set.walkGraph(semNodesTable); } ;
+    visitor.preVisit(this);
+    if (set != null) { set.walkGraph(semNodesTable, visitor); } ;
+    visitor.postVisit(this);
    }
 
   @Override
