@@ -5,13 +5,14 @@ package tla2sany.semantic;
 import java.math.BigInteger;
 import java.util.Hashtable;
 
-import tla2sany.explorer.ExploreNode;
-import tla2sany.st.TreeNode;
-import tla2sany.xml.SymbolContext;
-
 import org.w3c.dom.Document;
 import org.w3c.dom.Element;
 import org.w3c.dom.Node;
+
+import tla2sany.explorer.ExploreNode;
+import tla2sany.explorer.ExplorerVisitor;
+import tla2sany.st.TreeNode;
+import tla2sany.xml.SymbolContext;
 
 /**
  * Describes a numeral like 4095.  This number is represented by the
@@ -112,11 +113,13 @@ public class NumeralNode extends ExprNode {
 //  }
 
   @Override
-  public final void walkGraph(Hashtable<Integer, ExploreNode> semNodesTable) {
-    Integer uid = new Integer(myUID);
+  public final void walkGraph(Hashtable<Integer, ExploreNode> semNodesTable, ExplorerVisitor visitor) {
+    Integer uid = Integer.valueOf(myUID);
     if (semNodesTable.get(uid) != null) return;
 
     semNodesTable.put(uid, this);
+    visitor.preVisit(this);
+    visitor.postVisit(this);
   }
 
   @Override
