@@ -4,14 +4,15 @@ package tla2sany.semantic;
 
 import java.util.Hashtable;
 
-import tla2sany.explorer.ExploreNode;
-import tla2sany.st.TreeNode;
-import tla2sany.xml.SymbolContext;
-import util.UniqueString;
-
 import org.w3c.dom.Document;
 import org.w3c.dom.Element;
 import org.w3c.dom.Node;
+
+import tla2sany.explorer.ExploreNode;
+import tla2sany.explorer.ExplorerVisitor;
+import tla2sany.st.TreeNode;
+import tla2sany.xml.SymbolContext;
+import util.UniqueString;
 
 
 
@@ -84,11 +85,13 @@ public class StringNode extends ExprNode implements ExploreNode {
 //  }
 
   @Override
-  public final void walkGraph(Hashtable<Integer, ExploreNode> semNodesTable) {
-    Integer uid = new Integer(myUID);
+  public final void walkGraph(Hashtable<Integer, ExploreNode> semNodesTable, ExplorerVisitor visitor) {
+    Integer uid = Integer.valueOf(myUID);
     if (semNodesTable.get(uid) != null) return;
 
     semNodesTable.put(uid, this);
+    visitor.preVisit(this);
+    visitor.postVisit(this);
   }
 
   final String PrintVersion(String str) {
